--- a/d1-master/Project_Economic/src/main/resources/templates/home/my-account.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/home/my-account.html
@@ -13,7 +13,7 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Source+Code+Pro:700,900&display=swap" rel="stylesheet">
 
-    <!-- CSS Libraries -->
+    <!-- CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link th:href="@{/lib/slick/slick.css}" rel="stylesheet">
@@ -34,7 +34,6 @@
         </ul>
     </div>
 </div>
-<!-- Breadcrumb End -->
 
 <!-- My Account Start -->
 <div class="my-account">
@@ -164,25 +163,6 @@
                     <!--                                        <br><br>-->
                     <!--                                    </div>-->
                     <!--                                </div>-->
-                    <!--                                <h4>Nạp tiền</h4>-->
-                    <!--                                <div class="row">-->
-                    <!--                                    <div class="col-md-6">-->
-                    <!--                                        <input class="form-control" type="text" placeholder="Tên ngân hàng">-->
-                    <!--                                    </div>-->
-                    <!--                                    <div class="col-md-6">-->
-                    <!--                                        <input class="form-control" type="text" placeholder="Số tài khoản">-->
-                    <!--                                    </div>-->
-                    <!--                                    <div class="col-md-6">-->
-                    <!--                                        <input class="form-control" type="text" placeholder="Số tiền cần nạp">-->
-                    <!--                                    </div>-->
-                    <!--                                    <div class="col-md-6">-->
-                    <!--                                        <input class="form-control" type="text" th:placeholder="'Tổng số tiền còn lại: ' + ${user.getTotalMany() + '₫'}">-->
-                    <!--                                    </div>-->
-                    <!--                                    <div class="col-md-12">-->
-                    <!--                                        <button class="btn">Cập nhật</button>-->
-                    <!--                                        <br><br>-->
-                    <!--                                    </div>-->
-
                 </div>
             </div>
         </div>
