--- a/d1-master/Project_Economic/src/main/resources/templates/home/addnew.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/home/addnew.html
@@ -2,27 +2,23 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <title>E Store</title>
+    <title>P Store</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <!-- Favicon -->
     <link th:href="@{images/favicon.ico}" rel="icon">
-
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Source+Code+Pro:700,900&display=swap"
           rel="stylesheet">
-
-    <!-- CSS Libraries -->
+    <!-- CSS-->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link th:href="@{/lib/slick/slick.css}" rel="stylesheet">
     <link th:href="@{/lib/slick/slick-theme.css}" rel="stylesheet">
-
     <!-- Stylesheet -->
     <link th:href="@{/css/stylehome.css}" rel="stylesheet">
 </head>
-
 <body>
 <div th:replace="home/index::header_home"></div>
 <div style="height: 150px;"></div>
@@ -67,7 +63,6 @@
                         <h2>Thêm danh mục</h2>
                         <div class="row">
                             <div class="col-md-6 mr-2">
-<!--                                <label>Tên danh mục</label>-->
                                 <input class="form-control" type="text" placeholder="Tên danh mục" th:field="*{name}">
                             </div>
                         </div>
@@ -136,7 +131,7 @@
 </div>
 </div>
 
-<!-- Footer Bottom Start -->
+<!-- Footer-->
 <div class="footer-bottom">
     <div class="container">
         <div class="row">
@@ -153,7 +148,7 @@
 <!-- Back to Top -->
 <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
-<!-- JavaScript Libraries -->
+<!-- JavaScript-->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
 <script src="/lib/easing/easing.min.js"></script>
