--- a/d1-master/Project_Economic/src/main/resources/templates/home/index.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/home/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head th:fragment="head">
         <meta charset="utf-8">
-        <title>E Store</title>
+        <title>P Store</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
         <!-- Favicon -->
