--- a/d1-master/Project_Economic/src/main/resources/templates/index.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Estore</title>
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
     <style>
         body {
@@ -31,7 +31,7 @@
 
     <a type="button" class="btn btn-outline-primary" th:href="@{/api/users/login}">Login</a>
     <a type="button" class="btn btn-outline-primary" th:href="@{/api/users/register}">Register</a>
-    <a type="button" class="btn btn-outline-primary" th:href="@{/api/users/homepage}">Continue</a>
+    <a type="button" class="btn btn-outline-primary" th:href="@{/api/users/homepage}">Back to shop</a>
 </div>
 </body>
 </html>
