--- a/d1-master/Project_Economic/src/main/resources/templates/home/createproduct.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/home/createproduct.html
@@ -29,7 +29,7 @@
 <div class="breadcrumb-wrap">
     <div class="container-fluid">
         <ul class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Estore</a></li>
+            <li class="breadcrumb-item"><a href="#">Pstore</a></li>
             <li class="breadcrumb-item active">Tạo sản phẩm</li>
         </ul>
     </div>
@@ -39,7 +39,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-8">
-                <div class="checkout-inner">
+                <div class="checkout-inner" style="width: 147%">
                     <button type="button" class="btn btn-primary mb-2 btn_showformcreateproduct">Tạo sản phẩm</button>
                     <div class="billing-address col align-items-center " th:class="formcreateproduct"
                          style="display: none">
@@ -136,10 +136,11 @@
                             <tr>
                                 <th>STT</th>
                                 <th>Tên sản phẩm</th>
-                                <th>Mô tả</th>
+                                <th >Mô tả</th>
                                 <th>Giá</th>
                                 <th>Giá sale</th>
                                 <th>Ảnh</th>
+                                <th>Danh mục</th>
                                 <th>Số lượng</th>
                                 <th>Lượt thích</th>
                                 <th>Hoạt động</th>
@@ -151,12 +152,14 @@
                             <tr th:each="product,index:${allproducts}">
                                 <td th:text="${index.count}"></td>
                                 <td th:text="${product.getName()}"></td>
-                                <td th:text="${#strings.abbreviate(product.getDescription(), 5)}"></td>
+                                <td th:text="${#strings.abbreviate(product.getDescription(), 120)}"></td>
+<!--                                <td th:text="${product.getDescription()}"></td>-->
                                 <td th:text="${product.getCostPriceFormat()}"></td>
                                 <td th:text="${product.getSalePriceFormat()}"></td>
                                 <td >
                                     <img th:src = "${product.getImage_url()}" style="width: 50px;height: 50px"/>
                                 </td>
+                                <td th:text="${categories.get(product.getCategoryEntity().getId() - 1).getName()}"></td>
                                 <td th:text="${product.getCurrentQuantity()}"></td>
                                 <td th:text="${product.getLikes()}"></td>
                                 <td>
@@ -187,7 +190,7 @@
                                 </td>
                                 <td th:class="btneditproduct">
                                     <a th:href="@{/api/products/edit/(id=${product.getId()})}">
-                                        <img class="ionicon md" th:src="@{/images/edit.svg}">
+                                        <img class="ionicon md" style="width: 50px; height: 50px" th:src="@{/images/edit.svg}">
                                     </a>
                                 </td>
                             </tr>
@@ -196,26 +199,26 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4">
-                <div class="checkout-inner">
-                    <div class="checkout-summary">
-                        <table class="table">
-                            <thead>
-                            <tr>
-                                <th scope="col">Danh mục</th>
-                                <th scope="col">Số lượng sản phẩm</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr th:each="count:${countProductByCategory}">
-                                <th scope="row" th:text="${categories.get(count.getCategoryId() - 1).getName()}"></th>
-                                <td th:text="${count.getCount()}">Mark</td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
+<!--            <div class="col-lg-4">-->
+<!--                <div class="checkout-inner">-->
+<!--                    <div class="checkout-summary">-->
+<!--                        <table class="table">-->
+<!--                            <thead>-->
+<!--                            <tr>-->
+<!--                                <th scope="col">Danh mục</th>-->
+<!--                                <th scope="col">Số lượng sản phẩm</th>-->
+<!--                            </tr>-->
+<!--                            </thead>-->
+<!--                            <tbody>-->
+<!--                            <tr th:each="count:${countProductByCategory}">-->
+<!--                                <th scope="row" th:text="${categories.get(count.getCategoryId() - 1).getName()}"></th>-->
+<!--                                <td th:text="${count.getCount()}">Mark</td>-->
+<!--                            </tr>-->
+<!--                            </tbody>-->
+<!--                        </table>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
     </div>
 
